fix: do not have a sufficient contrast ratio

--- a/site.css
+++ b/site.css
@@ -57,7 +57,7 @@ img {
 
 a,
 a:visited {
-  color: #2bd;
+  color: #079;
   text-decoration: none;
 }
 
